...
        button.layer.cornerRadius = 16
        button.setTitle("Войти", for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: .bold)
        button.setTitleColor(UIColor(named: "ypBlack") ?? UIColor.black, for: .normal)
        button.backgroundColor = UIColor(named: "ypWhite") ?? UIColor.white
        button.addTarget(self, action: #selector(signinButtonTapped), for: .touchUpInside)
        button.accessibilityIdentifier = "Authenticate" 
        return button
    }()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
...
